--- a/style.css
+++ b/style.css
@@ -197,3 +197,81 @@ section#traffic {margin: 80px 0px;}
     font-family: arial;
     color: #696767;
 }
+
+
+/* footer */
+
+footer#contact {
+    /* padding: 60px 0px; */
+    background: #fd3e3e;
+    color: white;
+}
+
+.footersingleBox {
+    width: 350px;
+    float: left;
+    margin: 75px;
+}
+
+.footerWarapper {
+    overflow: hidden;
+}
+h1.logoLite {
+    font-size: 66px;
+    font-weight: 500;
+    border: 9px groove red;
+    border-radius: 100%;
+    height: 250px;
+    width: 250px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-family: 'Zen Tokyo Zoo', cursive;
+    margin: 0;
+    text-shadow: 4px 3px 3px black;
+}
+
+.metabody {
+    font-family: arial;
+}
+
+.metabody p {
+    font-size: 15px;
+    margin: 20px 0px;
+    font-weight: bold;
+}
+
+.footersingleBox h2 {
+    font-size: 31px;
+    text-shadow: 2px 2px 5px black;
+    margin-bottom: 46px;
+}
+
+.metabody div span {
+    margin: 0px 25px 0px 0px;
+}
+.fa1 span a {color: white;text-decoration: none;font-family: arial;}
+
+
+/* icon style */
+.loca1 span {
+    margin: 0px 10px;
+    font-family: arial;
+}
+
+.pho2 span {
+    margin: 0px 11px;
+    font-family: arial;
+}
+
+.fa1 span {
+    margin: 0 13px;
+    font-family: arial;
+}
+
+.trip1 span {
+    margin: 0 8px;
+    font-family: arial;
+}
+h4.copyrightLine {text-align: right;margin: 0;padding: 3px 0px;}
